parse plan